# bark-cpp-python

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  demo.py  pyproject.toml  test.py
bark_cpp/: __init__.py  _ctypes_extensions.py  _encodec.py  _ggml.py  bark.py  bark_cpp.py
chat_app/: main.py
vendor_cmakes/bark.cpp/: CMakeLists.txt
vendor_cmakes/encodec.cpp/: CMakeLists.txt
