[build-system]
requires = ["scikit-build-core[pyproject]>=0.9.2"]
build-backend = "scikit_build_core.build"

[project]
name = "bark_cpp_python"
dynamic = ["version"]
description = "Python bindings for the bark.cpp library via ctypes"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tran Minh Duc", email = "duc.t.m.47@gmail.com" },
]
dependencies = [
    "typing-extensions>=4.5.0",
    "numpy>=2.1.2",
    "scipy>=1.14.1",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[tool.scikit-build]
wheel.packages = ["bark_cpp"]
cmake.verbose = true
cmake.minimum-version = "3.21"
minimum-version = "0.5.1"
sdist.include = [
    ".git", 
    "vendor/bark.cpp/*",
    "vendors_cmakes"
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "bark_cpp/__init__.py"

[project.urls]
Homepage = "https://github.com/MDuc-ai/bark-cpp-python"

[tool.pytest.ini_options]
